avoid scrollbar in desktop browsers in tabsheets + better slider in component group
git-svn-id: http://dev.vaadin.com/svn/addons/TouchKit@21049 de684a11-831f-0410-ab27-cb86445eb682

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -971,6 +971,7 @@
 	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2);
 	color: buttonColor;
 	text-shadow: buttonTextShadow;
+	overflow: hidden;
 }
 
 .v-touchkit-tabbar-toolbar .v-touchkit-toolbar .v-caption {
@@ -1633,6 +1634,13 @@ span.v-datefield-calendarpanel-month {
 .v-touchkit-verticalcomponentgroup .v-select-select {
 	margin-top: 5px;
 	height:30px;
+}
+
+.v-touchkit-verticalcomponentgroup .v-slider {
+	margin-top: 20px;
+}
+.v-touchkit-verticalcomponentgroup .v-slider-base {
+	margin-left: 5px;
 }
 
 /* Grey lines between component */
